--- a/app/views/concerts/search.js.erb
+++ b/app/views/concerts/search.js.erb
@@ -3,6 +3,7 @@ $('.current_song_concerts a').attr("href", "/concerts/<%=@concerts[0].id%>")
 $('.month').text("<%=@concerts[0].start_datetime.strftime("%1m")%>");
 $('.divide_line').text("/");
 $('.day').text("<%=@concerts[0].start_datetime.strftime("%e")%>");
+$('.date').text("<%=@concerts[0].start_datetime.strftime("%a")%>");
 $('p.orchestra_name').text("<%=@concerts[0].orchestra.name%>");
 <% if @concerts[0].conductor %>
   $('p.conductor_name').text("<%=@concerts[0].conductor.name%>");
@@ -13,7 +14,7 @@ $('p.orchestra_name').text("<%=@concerts[0].orchestra.name%>");
   $('.other_concerts').addClass('visible');
   $('.count_concert').text("他<%= @concerts.length - 1%>公演");
   <% @concerts.drop(1).each do |concert|%>
-    $('ul.other_concert_lists').append("<li><a href='/concerts/<%= concert.id%>'><%= concert.start_datetime.strftime("%1m")%>/<%=concert.start_datetime.strftime("%e")%>　<%= concert.orchestra.name%>:<%= concert.conductor.name%></a></li>");
+    $('ul.other_concert_lists').append("<li><a href='/concerts/<%= concert.id%>'><%= concert.start_datetime.strftime("%1m")%>/<%=concert.start_datetime.strftime("%e")%><%=concert.start_datetime.strftime("%a")%>　<%= concert.orchestra.name%>:<%= concert.conductor.name%></a></li>");
   <%end%>
 <%else%>
   $('.other_concerts').removeClass('visible');
