--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -14,11 +14,12 @@
     .sub_navbar
       ul.sub_nav
         li
-          | オーケストラ一覧
-        li
-          | 指揮者一覧
-        li
-          | ホール一覧
+          a href="/orchestras"
+            | オーケストラ一覧
+        / li
+        /   | 指揮者一覧
+        / li
+        /   | ホール一覧
         li
           a href="/"
             | 近日公演
