--- a/app/assets/templates/home/top.html.slim
+++ b/app/assets/templates/home/top.html.slim
@@ -3,6 +3,8 @@
     h1.page_title
       = image_tag "/images/kinnjitu-logo.svg"
       |近日公演
+    p
+      |ここ1ヶ月の東京・神奈川におけるコンサート
   hr
   .row.concert_list
     .col-md-3 ng-repeat="concert in concerts"
