--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -4,6 +4,9 @@
 
 //共通で使うもの
 
+$black : #292929;
+$footer_text : #3BBFDB;
+
 body {
   background-color: #fafafa;
   padding-top: 90px;
@@ -36,6 +39,7 @@ body {
   font-size: 22px;
   font-weight: 100;
   letter-spacing: 2px;
+  margin-top: 0;
 }
 a {
   text-decoration: none;
@@ -43,6 +47,15 @@ a {
 }
 a:hover {
   text-decoration: none;
+}
+
+.name {
+  font-size: large;
+  font-weight: bold;
+}
+
+.page_area {
+  margin-top: 45px;
 }
 
 //ヘッダーナビゲーション
@@ -53,6 +66,8 @@ a:hover {
   top: 0;
   right: 0;
   left: 0;
+  border-radius: 0;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.26);
   .nav_wrapper {
     position: relative;
     height: 68px;
@@ -95,6 +110,7 @@ ul.sub_nav {
     font-size: 12px;
     font-weight: 100;
     letter-spacing: 3px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.26);
     a {
       color: #fff;
       padding: 6px 15px;
@@ -106,130 +122,6 @@ ul.sub_nav {
   }
 }
 
-
-// フッター
-.panel_box {
-  // display: none;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin-bottom: 0;
-  background-color: #eee;
-
-  .panel-body{
-    padding: 0 0 0 14px;
-    position: relative;
-    height: 60px;
-
-    .cd_infobox {
-      img.naxos_image{
-        width: 60px;
-        height: 60px;
-        float: left;
-      }
-      .cd_description{
-        float: left;
-        padding: 11px 0 7px 6px;
-        p.cd_song_title {
-          margin: 0 0 0 10px;
-          font-size: 12px;
-        }
-        p.cd_song_artist{
-          margin: 5px 0 0 10px;
-          font-size: 12px;
-        }
-      }
-    }
-    .player_buttons{
-      position: absolute;
-      top: 20px;
-      left: calc(50% - 50px);
-      span.glyphicon-step-backward {
-        font-size: x-large;
-        margin-right: 3px;
-        text-shadow: rgba(0, 0, 0, 0.8) 0 0 0.5em;
-      }
-      span.glyphicon-play {
-        font-size: x-large;
-        display: none;
-        margin: 0 10px 0;
-        text-shadow: rgba(0, 0, 0, 0.9) 0 0 0.5em;
-      }
-      span.glyphicon-pause {
-        font-size: x-large;
-        margin: 0 10px 0;
-        text-shadow: rgba(0, 0, 0, 0.9) 0 0 0.5em;
-      }
-      span.glyphicon-step-forward{
-        font-size: x-large;
-        margin-left: 3px;
-        text-shadow: rgba(0, 0, 0, 0.9) 0 0 0.5em;
-      }
-    }
-    .current_song_concerts {
-      margin-right: 15px;
-      position: absolute;
-      right: 0;
-      border-left: solid 7px rgb(114, 219, 242);
-      color: rgb(114, 219, 242);
-      height: 100%;
-      width: 475px;
-      background-color: #fff;
-      padding: 8px 6px;
-      &:hover {
-        // z-index: -1;
-        background-color: rgba(255, 255, 255, .3);
-      }
-      a {
-        width: 100%
-      }
-      .concerts_date {
-        float: left;
-        margin: 5px 0 0px 10px;
-        .month{
-          font-size: 100%;
-          color: #64c9e9;
-        }
-        .divide_line {
-          margin: -35px 7px -1px 9px;
-          font-size: 47px;
-          font-weight: inherit;
-          color: #64c9e9;
-        }
-        .day {
-          font-size: 180%;
-          margin-top: -44px;
-          margin-left: 20px;
-          color: #64c9e9;
-        }
-        .date {
-          margin: -24px 0 0 52px;
-          color: #64c9e9;
-        }
-      }
-      .concerts_artists{
-        float: left;
-        margin-left: 16px;
-        p.orchestra_name {
-          color: #64c9e9;
-          margin: 0px;
-          font-size: 12px;
-          margin: 3px 0 0 0;
-        }
-        p.conductor_name {
-          margin: 5px 0 0 0;
-          color: #64c9e9;
-          font-size: 12px;
-        }
-      }
-      .other_concerts {
-        float:right;
-        visibility: hidden;
-      }
-    }
-  }
-}
 
 #player {
   float: left;
@@ -264,15 +156,14 @@ ul.sub_nav {
     // box-shadow: 0 1px 1px #dddddd;
     box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.12),0px 2px 2px 0px rgba(0,0,0,0.24);
     background-color: #ffffff;
-    &:hover{
-      z-index: -1;
-      background-color: rgba(0, 0, 0, 0.03);
-    }
     .concert_img {
       height: 150px;
       // background-image: url(https://upload.wikimedia.org/wikipedia/commons/b/b5/Dohnanyi_Orchestra_Budafok.JPG);
       background-size: cover;
       position: relative;
+      // &:hover {
+      //   opacity: 0.7;
+      // }
       .concert_date {
         background-color: rgba(#000000, 0.50);
         color: white;
@@ -311,6 +202,11 @@ ul.sub_nav {
         margin-top: 5px;
       }
     }
+    &:hover{
+      // z-index: -1;
+      opacity: 0.8;
+      background-color: rgba(0, 0, 0, 0.03);
+    }
   }
 }
 
@@ -324,10 +220,6 @@ ul.sub_nav {
   padding: 10px 36px 20px 36px;
   h2 {
     color: rgb(114, 219, 242);
-  }
-  .name {
-    font-size: large;
-    font-weight: bold;
   }
   .players {
     .conductor {
@@ -355,7 +247,7 @@ ul.sub_nav {
     padding-top: 90px;
     &:hover{
       z-index: -1;
-      background-color: rgba(0, 0, 0, 0.05);
+      background-color: rgba(0, 0, 0, 0.04);
     }
   }
 }
@@ -371,7 +263,7 @@ ul.sub_nav {
       padding: 15px 20px;
     &:hover{
       z-index: -1;
-      background-color: rgba(0, 0, 0, 0.05);
+      background-color: rgba(0, 0, 0, 0.04);
     }
     }
     .concert_schedule{
@@ -424,4 +316,226 @@ ul.sub_nav {
       }
     }
   }
+}
+
+.form_box {
+  .form-group {
+    .artist_input {
+
+    }
+  }
+}
+
+
+.current_song_concerts:after {
+  content: "";
+  position: absolute;
+  top: 50%; left: -10px;
+  margin-top: -10px;
+  display: block;
+  width: 0px;
+  height: 0px;
+  border-style: solid;
+  border-width: 10px 10px 10px 0;
+  border-color: transparent #fff transparent transparent;
+}
+.current_song_concerts:hover:after{
+  border-color: transparent rgba(255, 255, 255, .9) transparent transparent;
+}
+
+.panel_box {
+  // display: none;
+  border: 0;
+  border-radius: 0;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin-bottom: 0;
+  background-color: #333333;
+  .panel-body{
+    padding: 0 0 0 14px;
+    position: relative;
+    height: 60px;
+
+    .cd_infobox {
+      float: left;
+      // height: 100%;
+      margin-top: 4px;
+      margin-left: 25px;
+      padding: 6px 12px;
+      // background-color: #757575;
+      .cd_wrapper {
+        float: left;
+        background-color: #bdbdbd;
+        img.naxos_image{
+          width: 40px;
+          height: 40px;
+          // float: left;
+        }
+      }
+      .cd_description{
+        float: left;
+        margin-left: 7px;
+        p.cd_nav {
+          margin: 0;
+          color: #888;
+          font-size: 12px
+        }
+        p.cd_song_title {
+          color: #fff;
+          margin: 0;
+          margin-top: 3px;
+          font-size: 11px;
+        }
+        p.cd_song_artist{
+          font-size: 12px;
+        }
+      }
+    }
+    .player_buttons{
+      padding: 19px 20px 0 20px;
+      border-right: 1px solid #666;
+      border-left: 1px solid #666;
+      height: 100%;
+      float: left;
+      color: #fff;
+      span.glyphicon-step-backward {
+        font-size: large;
+        margin-right: 3px;
+      }
+        span.glyphicon-play {
+          font-size: 21px;
+          display: none;
+          margin-left: 2px;
+          margin: 0 5px 0;
+        }
+        span.glyphicon-pause {
+          font-size: 21px;
+          margin-left: 2px;
+          margin: 0 5px 0;
+        }
+      // }
+      span.glyphicon-step-forward{
+        font-size: large;
+        margin-left: 3px;
+      }
+    }
+    .current_song_concerts {
+      margin-right: 10px;
+      margin-left: 35px;
+      position: relative;
+      float: left;
+      margin-top: 4px;
+      margin-bottom: 3px;
+      color: rgb(114, 219, 242);
+      height: 82%;
+      width: 450px;
+      background-color: #fff;
+      padding: 9px 6px;
+      box-shadow: 0 2px 0 #ccc;
+      &:hover {
+        background-color: rgba(255, 255, 255, .9);
+      }
+      a {
+        position: absolute;
+        top:0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        padding: 4px;
+      }
+      .concerts_date {
+        float: left;
+        margin: 5px 2px 0px 10px;
+        .month{
+          font-size: 100%;
+          color: $footer_text;
+        }
+        .divide_line {
+          margin: -32px 7px -1px 9px;
+          font-size: 44px;
+          font-weight: inherit;
+          color: $footer_text;
+        }
+        .day {
+          font-size: 180%;
+          margin-top: -44px;
+          margin-left: 20px;
+          color: $footer_text;
+        }
+        .date {
+          margin: -24px 0 0 49px;
+          color: $footer_text;
+        }
+      }
+      .concerts_artists{
+        float: left;
+        margin-left: 16px;
+        p.orchestra_name {
+          color: $footer_text;
+          margin: 0px;
+          font-size: 14px;
+          font-weight: 500;
+          margin: 3px 0 0 0;
+        }
+        p.conductor_name {
+          margin: 4px 0 0 0;
+          color: $footer_text;
+          font-size: 12px;
+        }
+      }
+      p.read_more {
+        // float: right;
+        // margin-top: 29px;
+        // margin-right: 1px;
+        position: absolute;
+        bottom: -10px;
+        right: 3px;
+        text-decoration: underline;
+        font-size: 12px;
+        color: #616161;
+        &:hover{
+          color: #01579B;
+        }
+      }
+      .current_song_concerts:after {
+      	content: "";
+      	position: absolute;
+      	top: 50%; left: -10px;
+      	margin-top: -10px;
+      	display: block;
+      	width: 0px;
+      	height: 0px;
+      	border-style: solid;
+      	border-width: 10px 10px 10px 0;
+      	border-color: transparent #fff transparent transparent;
+      }
+      .current_song_concerts:hover:after{
+        border-color: transparent rgba(255, 255, 255, .9) transparent transparent;
+      }
+    }
+    .other_concerts {
+      float:left;
+      margin-top: 4px!important;
+      visibility: hidden;
+      box-shadow: 0 2px 0 #ccc!important;
+      button{
+        border-radius: 0;
+        &:hover {
+          background-color: rgba(255, 255, 255, .9);
+        }
+      }
+    }
+  }
+}
+
+.button_anime,
+.button_anime::before,
+.button_anime::after {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	-webkit-transition: all .3s;
+	transition: all .3s;
 }
