--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -9,7 +9,7 @@
           a href=""
             |CONTACT
         li
-          a href=""
+          a href="/about"
             |ABOUT
     .sub_navbar
       ul.sub_nav
